--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,5 +23,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.+'
     compile 'com.android.support:support-v4:21.0.0+'
+    compile "com.daimajia.swipelayout:library:1.1.7@aar"
     compile 'com.ikimuhendis:ldrawer:0.1'
 }
