--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.0.+'
     compile 'com.android.support:support-v4:21.0.0+'
     compile 'com.ikimuhendis:ldrawer:0.1'
+    compile "com.daimajia.swipelayout:library:1.1.7@aar"
 }
