--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,10 +11,13 @@ android {
         versionCode 1
         versionName "1.0"
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
     buildTypes {
         release {
-            apply plugin: 'idea'
-            runProguard false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -28,4 +31,5 @@ dependencies {
     compile 'com.ikimuhendis:ldrawer:0.1'
     compile 'com.melnykov:floatingactionbutton:1.0.7'
     compile 'com.telly:floatingaction:0.0.6'
+    compile 'com.ms-square:expandableTextView:0.1.2'
 }
