--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "remerl.me.studenthelper"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
@@ -28,8 +28,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.0.+'
     compile 'com.android.support:support-v4:21.0.0+'
     compile "com.daimajia.swipelayout:library:1.1.7@aar"
-    compile 'com.ikimuhendis:ldrawer:0.1'
-    compile 'com.melnykov:floatingactionbutton:1.0.7'
-    compile 'com.telly:floatingaction:0.0.6'
     compile 'com.ms-square:expandableTextView:0.1.2'
+    compile 'com.melnykov:floatingactionbutton:1.1.0'
+    compile 'de.hdodenhof:circleimageview:1.2.1'
 }
