--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,26 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="remerl.me.studenthelper" >
+    package="remerl.me.studenthelper">
 
     <application
         android:name=".App"
         android:label="@string/app_name"
         android:icon="@null"
-        android:theme="@style/MyTheme.Material" >
+        android:theme="@style/MyTheme.Material">
         <activity
             android:name=".ui.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.CommentActivity"
+            android:parentActivityName="remerl.me.studenthelper.ui.MainActivity"
+            android:label=""
+            />
+        <activity
+            android:name=".ui.ResonseActivity"
+            />
+
         <provider
             android:name=".dao.TodoProvider"
             android:authorities="me.remerl.provider"
             android:exported="false">
-            <grant-uri-permission android:pathPattern=".*"/>
+            <grant-uri-permission android:pathPattern=".*" />
         </provider>
     </application>
 
