--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,12 @@
         </activity>
         <activity
             android:name=".ui.CommentActivity"
-            android:parentActivityName="remerl.me.studenthelper.ui.MainActivity"
             android:label=""
             />
         <activity
+            android:windowSoftInputMode="adjustResize"
             android:name=".ui.ResonseActivity"
+            android:label=""
             />
 
         <provider
