优化了评论列表，添加了匿名留言,欠分页

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,11 @@
             android:label=""
             />
         <activity
+            android:name=".ui.MessageActivity"
+            android:label=""
+            android:windowSoftInputMode="adjustResize"
+            />
+        <activity
             android:windowSoftInputMode="adjustResize"
             android:name=".ui.ResonseActivity"
             android:label=""
