--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,9 +25,9 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:21.0.+'
-    compile 'com.android.support:support-v4:21.0.0+'
-    compile "com.daimajia.swipelayout:library:1.1.7@aar"
+    compile 'com.android.support:appcompat-v7:21.0.2'
+    compile 'com.android.support:support-v4:21.0.2'
+    compile 'com.daimajia.swipelayout:library:1.1.7@aar'
     compile 'com.ms-square:expandableTextView:0.1.2'
     compile 'com.melnykov:floatingactionbutton:1.1.0'
     compile 'de.hdodenhof:circleimageview:1.2.1'
