--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/MyTheme.Material">
         <activity android:name=".ui.LoginActivity"
-
+                  android:theme="@style/LightTheme"
 
             >
             <intent-filter>
@@ -17,7 +17,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.RegisterActivity" />
+        <activity android:name=".ui.RegisterActivity"
+            android:theme="@style/LightTheme"
+            />
 
 
         <activity
