--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/MyTheme.Material">
         <activity android:name=".ui.LoginActivity"
-                  android:theme="@style/LightTheme"
+                  android:theme="@style/Theme.AppCompat"
 
             >
             <intent-filter>
@@ -17,6 +17,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
+        <activity
+            android:name=".ui.SettingActivity"
+            android:theme="@style/MyTheme.Material.Light"
+            android:label="设置" />
+
         <activity android:name=".ui.RegisterActivity"
             android:theme="@style/LightTheme"
             />
